# gasbombe

./: .dockerignore  .gitignore  .npmignore  Cargo.toml  Dockerfile  README.ja.md  README.md  biome.json  build.config.ts  commit_message.txt  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  vitest.config.ts
.github/workflows/: publish.yaml
package/: Cargo.toml
package/src/: lib.rs  main.rs
package/templates/: package.json.tera
package/templates/common/: tsconfig.json.tera
scripts/: buildTemplates.ts  copyTemplates.ts
src/: cli.ts  index.ts  lib.rs
template-projects/common/: .gitignore  common_biome.json
template-projects/html-js/: README.md  biome.json  index.html  package.json  rolldown.config.mjs  tsconfig.json
template-projects/html-js/server/: app.js
template-projects/html-js/src/: main.js  say.js
template-projects/react/: README.md  package.json  tsconfig.app.json  vite.config.ts
template-projects/react-ciderjs/: .env  README.md  biome.json  gasnuki.config.ts  package.json  vite.config.ts
template-projects/react-ciderjs/server/: app.ts
template-projects/react-ciderjs/src/: App.tsx  main.tsx
template-projects/react-tsx/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  rolldown.config.ts  vite.config.ts
template-projects/react-tsx/server/: app.ts
template-projects/react-tsx/src/: App.tsx
template-projects/react/server/: app.ts
template-projects/react/src/: App.tsx
template-projects/server-ciderjs/: package.json  vitest.config.ts
template-projects/server-ciderjs/tests/: app.test.ts
template-projects/server-js/: README.md  package.json  rolldown.config.mjs  vitest.config.js
template-projects/server-ts/: README.md  package.json  rolldown.config.ts  tsconfig.json  vitest.config.ts
template-projects/vanilla-js/: tsconfig.json  vitest.config.js
template-projects/vanilla-ts/: .clasp.json  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  rolldown.config.ts  vitest.config.ts
template-projects/vue/: index.html  package.json  rolldown.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
template-projects/vue-ciderjs/: README.md  gasnuki.config.ts  package.json  vite.config.ts
tests/: index.spec.ts
types/: index.ts
(+34 files in other folders)
