[package]
name = "gasbombe"
version = "0.1.0"
edition = "2021"
description = "A TypeScript Project Generator for GoogleAppsScript, available as CLI"
license = "MIT"
repository = "https://github.com/luthpg/gasbombe"

# Wasmビルド用の設定
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# シリアライズ/デシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# テンプレートエンジン（Jinja2ライク）
tera = "1.19.1"

# エラーハンドリング
anyhow = "1.0.86"

# Wasm化に必要
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# CLI用の依存関係 (optional = true にする)
clap = { version = "4.5.4", features = ["derive"], optional = true }
inquire = { version = "0.7.5", optional = true }

[features]
default = ["cli"]
# CLIビルド時に有効化する機能
cli = ["dep:clap", "dep:inquire"]
# Wasmビルド時に有効化する機能 (パニック時のコンソール出力を有効にする)
wasm = ["console_error_panic_hook"]

# CLIバイナリの設定
[[bin]]
name = "gasbombe"
path = "src/bin/gasbombe/main.rs"
required-features = ["cli"] # cli featureが有効な時のみビルド

[profile.release]
# リリースビルドの最適化
lto = true
opt-level = 's' # サイズを優先して最適化

# wasm-pack用のメタデータ
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os'] # wasm-optでさらにサイズを最適化
