[package]
name = "gasbombe"
version = "0.1.0"
edition = "2021"

[dependencies]
# 高機能なCLI引数パーサー
clap = { version = "4.5.4", features = ["derive"] }

# 対話的なプロンプト
inquire = "0.7.5"

# テンプレートエンジン（Jinja2ライク）
tera = "1.19.1"

# シリアライズ/デシリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Wasm化に必要
wasm-bindgen = "0.2"

# エラーハンドリング
anyhow = "1.0.86"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
